tests/errors/parameter_01.f90
program parameter_01
    integer, parameter :: i = 2
    i = 3
    print*,i
end program